<?xml version="1.0"?>
<package format="2">
  <name>demo_teleop</name>
  <version>0.0.1</version>
  <description>A package for teleoperating robotont robot</description>
  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
  </export>
</package>
